<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:orientation="vertical"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".MainActivity">-->

    <!--main content-->
    <android.support.v4.app.FragmentTabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="bottom"
                android:layout_alignParentBottom="true"
                android:fadingEdge="none"
                android:showDividers="none"
                android:background="#9900ff00">

            </TabWidget>
        </RelativeLayout>

    </android.support.v4.app.FragmentTabHost>

    <!--Sliding Menu from right to left-->
    <RelativeLayout
        android:id="@+id/act_main_nav_root"
        android:layout_width="@dimen/act_main_sliding_menu_size"
        android:layout_height="match_parent"
        android:padding="@dimen/common_space_double"
        android:background="@color/bg_act_main_nav"
        android:layout_gravity="end">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/act_main_nav_btn_log_out">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hello"
                android:textStyle="normal"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_small"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/act_main_nav_tv_user_name"
                android:text="Peter Leong"
                android:textColor="@color/common_orange"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/act_main_nav_tv_announcements"
                android:text="@string/label_announcements"
                style="@style/act_main_nav_tv_item"/>

            <TextView
                android:id="@+id/act_main_nav_tv_approved_projects"
                android:text="@string/label_approved_projects"
                style="@style/act_main_nav_tv_item"/>

            <TextView
                android:id="@+id/act_main_nav_tv_hms"
                android:text="@string/label_hms"
                style="@style/act_main_nav_tv_item"/>

            <TextView
                android:id="@+id/act_main_nav_tv_approved_book_room"
                android:text="@string/label_book_rooms"
                style="@style/act_main_nav_tv_item"/>

            <TextView
                android:id="@+id/act_main_nav_tv_events"
                android:text="@string/label_events"
                style="@style/act_main_nav_tv_item"/>

            <TextView
                android:id="@+id/act_main_nav_tv_your_appointment"
                android:text="@string/label_your_appointments"
                style="@style/act_main_nav_tv_item"/>
        </LinearLayout>

        <Button
            android:id="@+id/act_main_nav_btn_log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/label_sign_out"
            android:textColor="@android:color/white"
            android:paddingTop="@dimen/common_space_double"
            android:paddingBottom="@dimen/common_space_double"
            android:background="@color/bg_act_main_nav_btn_sign_out" />

    </RelativeLayout>

<!--</LinearLayout>-->

</android.support.v4.widget.DrawerLayout>
